# process-watchdog

./: LICENSE  README.md  setup.cfg
src/examples/: single-cell.ipynb
src/examples/.ipynb_checkpoints/: all-cells-complete-checkpoint.ipynb  all-cells-error-checkpoint.ipynb
src/process_watchdog.egg-info/: PKG-INFO  SOURCES.txt
src/watchdog/: Email.py  JupyterLabMagic.py  Notifier.py
