[metadata]
name = process_watchdog
version = 1.0.0
description = Monitors .py and .ipynb processes and notifies when they are finished
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/OFSkean/process-watchdog
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = src
packages = find:
python_requires = >=3.6
    
[options.packages.find]
where = src